--- a/css/register.css
+++ b/css/register.css
@@ -8,6 +8,7 @@
 
 	justify-content: center;
 	align-items: center;
+	border-radius: 2em;
 }
 
 #section-register{
@@ -18,8 +19,8 @@
 	text-align: center;
 
 	background: var(--purple);
+
 	border-radius: 2em;
-	padding: 2em;
 
 	height: 100%;
 	width: 100%;
@@ -27,15 +28,38 @@
 	color: var(--white);
 }
 
-label{
-	margin: 0 1em;
+.create{
+	height: 100%;
+	width: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	border-radius: 2em 0 0 2em;
+	background: var(--white);
+}
+
+#submit-login{
+	background: none;
+	border: none;
+	color: var(--purple);
+	padding: 1em 2em;
+	cursor: pointer;
 }
 
 .text-account{
 	font-size: 1.5em;
+	padding: 1em;
 	padding-bottom: 1em;
+
+	color: var(--purple);
 }
 
+label{
+	margin: 0 1em;
+}
 
 ::placeholder{
 	color: var(--white);
@@ -53,7 +77,7 @@ label{
 #submit-register{
 	background: none;
 	border: none;
-	margin: 1em 0;
 	color: var(--white);
+	padding: 1em 2em;
 	cursor: pointer;
 }
