finally website responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('login.css');
-@import url('register.css');
+@import url('search.css');
 
 :root{
 	--purple: rgba(100, 120, 255);
@@ -40,4 +40,12 @@ main{
 	width: 80vw;
 
 	border-radius: 2em;
+}
+
+/* responsive */
+
+@media screen and (max-width: 400px){
+	#container{
+		flex-direction: column-reverse;
+	}
 }
