--- a/css/login.css
+++ b/css/login.css
@@ -18,6 +18,20 @@
 	color: var(--white);
 }
 
+@media screen and (max-width: 960px){
+	.section-welcome{
+		width: 80vw;
+		border-radius: 2em 0 0 2em;
+	}
+}
+
+@media screen and (max-width: 400px){
+	.section-welcome{
+		width: 80vw;
+		border-radius: 0 0 2em 2em;
+	}
+}
+
 .section-welcome_title{
 	margin-bottom: 10px;
 	font-size: 3em;
@@ -56,12 +70,32 @@
 	align-items: center;
 }
 
+@media screen and (max-width: 960px){
+	.section-login{
+		width: 80vw;
+		border-radius: 0 2em 2em 0;
+	}
+}
+
+@media screen and (max-width: 400px){
+	.section-login{
+		width: 80vw;
+		border-radius: 2em 2em 0 0;
+	}
+}
+
 .section-login_title{
 	color: rgba(100, 190, 255);
 	margin-bottom: 1em;
 	font-size: 3em;
 
 	color: var(--purple);
+}
+
+@media screen and (max-width: 400px){
+	.section-login_title{
+		font-size: 2em;
+	}
 }
 
 .section-login_subtitle{
@@ -112,3 +146,5 @@
 .fa-regular{
 	font-size: 1em;
 }
+
+/* responsive */
