--- a/css/search.css
+++ b/css/search.css
@@ -1,6 +1,6 @@
 @import url('style.css');
 
-#container-register{
+#container-search{
 	display: flex;
 
 	height: 60vh;
@@ -11,7 +11,7 @@
 	border-radius: 2em;
 }
 
-#section-register{
+#section-search{
 	display: flex;
 
 	align-items: center;
@@ -80,4 +80,24 @@ label{
 	color: var(--white);
 	padding: 1em 2em;
 	cursor: pointer;
+}
+
+@media screen and (max-width: 990px){
+	#section-search{
+		flex-direction: column;
+		height: 100%;
+	}
+	.create{
+		border-radius: 2em 2em 0 0;
+		margin-bottom: 3em;
+	}
+	#submit-cep{
+		margin: 2em;
+	}
+	.container-btn{
+		margin-bottom: 2em;
+	}
+}
+
+@media screen and (max-width: 400px){
 }
