--- a/css/login.css
+++ b/css/login.css
@@ -33,13 +33,18 @@
 	}
 }
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 460px){
+	.container__index{
+		flex-direction: column;
+	}
+
 	.section-welcome{
 		width: 80vw;
-		border-radius: 0 0 2em 2em;
+		border-radius: 2em 2em 0 0;
 	}
+
 	.section-welcome_title{
-	font-size: 2em;
+		font-size: 2em;
 	}
 }
 
@@ -94,11 +99,12 @@
 	}
 }
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 460px){
 	.section-login{
 		width: 80vw;
-		border-radius: 2em 2em 0 0;
+		border-radius: 0 0 2em 2em;
 	}
+
 	.section-login_title{
 		font-size: 2em;
 		margin: .5em 0;
